# simple_annotation_app

./: package.json  pyproject.toml
public/: index.html
src/: app.py  script.js  server.py
