[tool.poetry]
name = "simple-annotation-app"
version = "0.1.0"
description = ""
authors = ["bamps53 <daisuke0530@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
